force-app/main/default/objects/Contact/fields/Telegram_Phone__c.field-meta.xml
<CustomField>
    <fullName>Telegram_Phone__c</fullName>
    <label>Telegram Phone</label>
    <type>Phone</type>
</CustomField>