force-app/main/default/objects/Contact/fields/Telegram_Username__c.field-meta.xml
<CustomField>
    <fullName>Telegram_Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Telegram Username</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>