force-app/main/default/objects/Contact/fields/Viber__c.field-meta.xml
<CustomField>
    <fullName>Viber__c</fullName>
    <label>Viber</label>
    <type>Phone</type>
</CustomField>